--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="iphone neu">
           <div class="title">
             <div><i class="fas fa-chevron-left"></i></div>
-            <div>NOW PLAYING</div>
+            <div class="playing">NOW PLAYING</div>
             <div><i class="fas fa-ellipsis-v"></i></div>
           </div>
           <div class="album-cover">
@@ -26,17 +26,17 @@
             </h3>
           </div>
           <div class="buttons">
-                <button class="btn lg red neu"><i class="fas fa-heart"></i></button>
-                <button class="btn lg neu"><i class="fas fa-backward"></i></button>
-                <button class="btn lg neu"><i class="fas fa-play"></i></button>
-                <button class="btn lg neu"><i class="fas fa-forward"></i></button>
+                <button class="btn red neu"><i class="fas fa-heart" style="color: #ffffff;"></i></button>
+                <button class="btn neu"><i class="fas fa-backward" style="color: #fff;"></i></button>
+                <button class="btn neu"><i class="fas fa-play" style="color: #fff;"></i></button>
+                <button class="btn neu"><i class="fas fa-forward" style="color: #fff;"></i></button>
             </div>
           <div class="track neu">
             <div></div>
           </div>
           <div class="lyrics">
             <i class="fas fa-angle-up"></i>
-            <span>LYRICS</span>
+            <span class="lyrics">LYRICS</span>
           </div>
         </div>
       </div>
